# SimpleMemoryAllocator

projekt1_19/: 1_9.c  CMakeLists.txt  custom_unistd.h  heap.c  heap.h  makefile  memmanager.c  new 1.txt  tested_declarations.h  unit_test_v2.c
